--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             الخيرية والداعمين لها.
                         </p>
                         <div class="hero_btns" data-aos="fade-up">
-                            <a href="#!">إشترك الأن</a>
+                            <a href="#packages">إشترك الأن</a>
                             <button>
                                 <i class="fa-solid fa-play"></i>
                             </button>
