packages and header fixes

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             </div>
         </nav>
     </header>
+    <span class="overlay"></span>
     <main>
         <!-- Hero section -->
         <section class="hero-section sec" id="home">
@@ -246,7 +247,7 @@
             </div>
         </section>
         <!-- packages section -->
-        <section class="packages" id="packages">
+        <section class="packages sec" id="packages">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                 <path fill="#FEF7EF" fill-opacity="1"
                     d="M0,0L48,16C96,32,192,64,288,106.7C384,149,480,203,576,234.7C672,267,768,277,864,277.3C960,277,1056,267,1152,245.3C1248,224,1344,192,1392,176L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
@@ -261,39 +262,68 @@
             <p class="txt" data-aos="fade-up">اختر الآن الباقة المناسبة لدعم مؤسستك الخيرية وابدأ في استخدام النظام</p>
             <div class="container p-0">
                 <div class="row m-0">
-                    <div class="col-lg-4 col-md-6 col-12 p-3">
-                        <div class="package-card" data-aos="fade-up">
-                            <div class="title">
-                                <h4>الباقة المجانية</h4>
-                                <h5 class="price">0 ر.س</h5>
+                    <div class="col-lg-4 col-md-6 col-12 p-3" data-aos="fade-up">
+                        <div class="package-card">
+                            <div class="package_container">
+                                <div class="title">
+                                    <h4>الباقة الربع سنوية</h4>
+                                    <h5 class="price">90 ر.س</h5>
+                                </div>
+                                <p>تمتع بميزات أساسية لإدارة أنشطة مؤسستك الخيرية مع باقتنا الربع سنوية. هذه الحزمة
+                                    مثالية
+                                    للجمعيات الصغيرة والمتوسطة، وتساعدك في تنظيم التبرعات والتواصل مع المتبرعين بسهولة.
+                                </p>
+                                <ul>
+                                    <li><i class="fa-light fa-circle-check"></i> تنظيم التبرعات بطرق سهلة وآمنة</li>
+                                    <li><i class="fa-light fa-circle-check"></i> إدارة بيانات المتبرعين</li>
+                                    <li><i class="fa-light fa-circle-check"></i> توفير تقارير شهرية عن الأنشطة</li>
+                                    <li><i class="fa-light fa-circle-check"></i> دعم فني عبر البريد الإلكتروني</li>
+                                </ul>
+                                <a href="https://wa.me/966566717225"><span>اشترك الآن</span></a>
                             </div>
-                            <p>تمتع بميزات أساسية لإدارة أنشطة مؤسستك الخيرية مع باقتنا المجانية. هذه الحزمة مثالية
-                                للجمعيات الصغيرة والمتوسطة، وتساعدك في تنظيم التبرعات والتواصل مع المتبرعين بسهولة.</p>
-                            <a href="https://wa.me/966566717225"><span>اشترك الآن</span></a>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-12 p-3">
-                        <div class="package-card p2" data-aos="fade-up">
-                            <div class="title">
-                                <h4>الباقة الاحترافية</h4>
-                                <h5 class="price">180 ر.س</h5>
+                    <div class="col-lg-4 col-md-6 col-12 p-3" data-aos="fade-up">
+                        <div class="package-card second p2">
+                            <div class="package_container">
+                                <div class="title">
+                                    <h4>الباقة النصف سنوية</h4>
+                                    <h5 class="price">180 ر.س</h5>
+                                </div>
+                                <p>ارتقِ بإدارة مؤسستك الخيرية مع الباقة النصف سنوية. هذه الحزمة توفر أدوات متقدمة
+                                    لإدارة
+                                    التبرعات، وتتبع المشاريع، وإعداد تقارير مالية مفصلة، مما يسهل عليك تقديم خدمة متميزة
+                                    للمتبرعين والمستفيدين.</p>
+                                <ul>
+                                    <li><i class="fa-light fa-circle-check"></i> جميع مزايا الباقة الربع سنوية</li>
+                                    <li><i class="fa-light fa-circle-check"></i> تتبع المشاريع الخيرية</li>
+                                    <li><i class="fa-light fa-circle-check"></i> إعداد تقارير مالية مفصلة</li>
+                                    <li><i class="fa-light fa-circle-check"></i> دعم فني عبر الهاتف والبريد الإلكتروني
+                                    </li>
+                                </ul>
+                                <a href="https://wa.me/966566717225"><span>اشترك الآن</span></a>
                             </div>
-                            <p>ارتقِ بإدارة مؤسستك الخيرية مع الباقة الاحترافية. هذه الحزمة توفر أدوات متقدمة لإدارة
-                                التبرعات، وتتبع المشاريع، وإعداد تقارير مالية مفصلة، مما يسهل عليك تقديم خدمة متميزة
-                                للمتبرعين والمستفيدين.</p>
-                            <a href="https://wa.me/966566717225"><span>اشترك الآن</span></a>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-12 p-3">
-                        <div class="package-card" data-aos="fade-up">
-                            <div class="title">
-                                <h4>الباقة المتميزة</h4>
-                                <h5 class="price">320 ر.س</h5>
+                    <div class="col-lg-4 col-md-6 col-12 p-3" data-aos="fade-up">
+                        <div class="package-card">
+                            <div class="package_container">
+                                <div class="title">
+                                    <h4>الباقة السنوية</h4>
+                                    <h5 class="price">620 ر.س</h5>
+                                </div>
+                                <p>تمتع بأفضل ميزات إدارة المؤسسات الخيرية مع باقتنا السنوية. هذه الحزمة مصممة خصيصًا
+                                    للجمعيات الكبيرة والمشاريع الضخمة، وتوفر تحليلات شاملة، وأتمتة للمهام، ودعم فني على
+                                    مدار
+                                    الساعة، مما يمكنك من إدارة أنشطتك بكفاءة وفعالية.</p>
+                                <ul>
+                                    <li><i class="fa-light fa-circle-check"></i> جميع مزايا الباقة النصف سنوية</li>
+                                    <li><i class="fa-light fa-circle-check"></i> تحليلات شاملة للبيانات</li>
+                                    <li><i class="fa-light fa-circle-check"></i> أتمتة للمهام الروتينية</li>
+                                    <li><i class="fa-light fa-circle-check"></i> دعم فني على مدار الساعة</li>
+                                </ul>
+                                <a href="https://wa.me/966566717225"><span>اشترك الآن</span></a>
                             </div>
-                            <p>تمتع بأفضل ميزات إدارة المؤسسات الخيرية مع باقتنا المتميزة. هذه الحزمة مصممة خصيصًا
-                                للجمعيات الكبيرة والمشاريع الضخمة، وتوفر تحليلات شاملة، وأتمتة للمهام، ودعم فني على مدار
-                                الساعة، مما يمكنك من إدارة أنشطتك بكفاءة وفعالية.</p>
-                            <a href="https://wa.me/966566717225"><span>اشترك الآن</span></a>
                         </div>
                     </div>
                 </div>
@@ -478,7 +508,8 @@
         <div class="container">
             <div class="row m-0">
                 <div class="col-12 copy d-flex align-items-center justify-content-center">
-                    <p>©<script> document.write(new Date().getFullYear()) </script> جميع الحقوق محفوظة لدى
+                    <p>©
+                        <script> document.write(new Date().getFullYear()) </script> جميع الحقوق محفوظة لدى
                         <a href="https://https://romoz.co">رموز <img src="assets/images/fav.svg" alt="nami"></a>
                     </p>
                 </div>
