--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
             <p class="txt">لدينا دعم على مدار ٢٤ ساعه لا تتردد فى التواصل والاستفسار عن اى شى</p>
             <div class="container">
                 <div class="row m-0">
-                    <div class="col-lg-6 col-12 p-3">
+                    <div class="col-lg-6 col-12 p-lg-3 p-2">
                         <div class="shaded-card">
                             <form class="container" action="">
                                 <div class="row m-0">
