--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="swiper-pagination"></div>
+                    <div class="swiper-pagination" data-aos="fade-up"></div>
                 </div>
             </div>
         </section>
