--- a/index.html
+++ b/index.html
@@ -154,21 +154,260 @@
         <!-- system component -->
         <section class="systemcomponent" id="component">
             <div class="container">
-                <h2 class="text-center mb-5">منتجات نظام رموز</h2>
+                <h2 class=" title mb-5">مكونات نظام رموز </h2>
                 <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                      <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Home</button>
-                      <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</button>
-                      <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</button>
-                      <button class="nav-link" id="nav-disabled-tab" data-bs-toggle="tab" data-bs-target="#nav-disabled" type="button" role="tab" aria-controls="nav-disabled" aria-selected="false" disabled>Disabled</button>
+                        <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#nav-1" role="tab"> المكتب
+                            الإلكتروني </button>
+                        <button class="nav-link" data-bs-toggle="tab" data-bs-target="#nav-2" role="tab"> مجلس الإدارة
+                        </button>
+                        <button class="nav-link" data-bs-toggle="tab" data-bs-target="#nav-3" role="tab"> لجان المساعدات
+                        </button>
+                        <button class="nav-link" data-bs-toggle="tab" data-bs-target="#nav-4" role="tab"> إدارة الحوكمة
+                        </button>
+                        <button class="nav-link" data-bs-toggle="tab" data-bs-target="#nav-5" role="tab"> الإدارة
+                            التنفيذية الالكترونية </button>
+                        <button class="nav-link" data-bs-toggle="tab" data-bs-target="#nav-6" role="tab"> خدمات
+                            المستفيدين </button>
                     </div>
-                  </nav>
-                  <div class="tab-content" id="nav-tabContent">
-                    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">...</div>
-                    <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">...</div>
-                    <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">...</div>
-                    <div class="tab-pane fade" id="nav-disabled" role="tabpanel" aria-labelledby="nav-disabled-tab" tabindex="0">...</div>
-                  </div>
+                </nav>
+                <div class="tab-content" id="nav-tabContent">
+                    <div class="tab-pane fade show active" id="nav-1" role="tabpanel">
+                        <!-- component content -->
+                        <div class="componentContent">
+                            <img class="componentImg" src="assets/images/amity-img-3.jpg" alt="">
+                            <p class="componentText">
+                                تغيير لنمطية المكتب التقليدي الذي يعتمد على الحضور والتواجد من الموظف طوال ساعات العمل
+                                في المكتب لتنفيذ الإجراءات والسياسات التي يقوم عليها العمل في الجمعية والتي تعتمد على
+                                الورق وأي غياب للموظف يؤدي إلى تعطل العمل وبالتالي توقف المعاملات الأمر الذي ينعكس سلباً
+                                على أداء الجمعية
+                                لقد تم تغيير هذا النمط إلى المكتب الإلكتروني في نظام رافد
+                                له خصائص المكتب التقليدي، بل وأكثر من حيث المتابعة والمرونة والإنجاز
+                                أي موظف يحصل على اسم مستخدم وكلمة مرور على نظام رافد وهي تمثل المفتاح الخاص بدخول المكتب
+                                الإلكتروني الخاص به وعليه الحفاظ على هذا المفتاح
+                                هذا المكتب مرتبط بكل إدارات النظام في المكاتب الأخرى في إدارات الجمعية وبالتالي تمثل
+                                الجمعية شبكة متكاملة على السحابة تؤدي دورها على أكمل وجه
+                            </p>
+                            <!-- list -->
+                            <div class="list">
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">1</span>
+                                    <p class="text">
+                                        تسجيل الحضور والانصراف استلام المهام من مجلس الإدارة أو من المدير التنفيذي أو
+                                        مديره المباشر ومتابعة تنفيذها
+                                    </p>
+                                </div>
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">2</span>
+                                    <p class="text">
+                                        القيام بالصلاحيات الممنوحة له من إدارة النظام مثل أن يكون باحث اجتماعي فهو يقوم
+                                        بصلاحيات البحث الاجتماعي أو التحديث
+                                    </p>
+                                </div>
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">3</span>
+                                    <p class="text">
+                                        متابعة مؤشرات الخطة التشغيلية المبنية على الخطة الاستراتيجية وتنفيذها
+                                    </p>
+                                </div>
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">4</span>
+                                    <p class="text">
+                                        إمكانية التواصل الداخلي وطلب معلومات أو إرسال معلومات أو بيانات مع كل إدارة من
+                                        إدارات الجمعية ومكاتب الجمعية الأخرى
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nav-2" role="tabpanel">
+                        <!-- component content -->
+                        <div class="componentContent">
+                            <p class="componentText">
+                                تغيير لنمطية المكتب التقليدي الذي يعتمد على الحضور والتواجد من الموظف طوال ساعات العمل
+                                في المكتب لتنفيذ الإجراءات والسياسات التي يقوم عليها العمل في الجمعية والتي تعتمد على
+                                الورق وأي غياب للموظف يؤدي إلى تعطل العمل وبالتالي توقف المعاملات الأمر الذي ينعكس سلباً
+                                على أداء الجمعية
+                                لقد تم تغيير هذا النمط إلى المكتب الإلكتروني في نظام رافد
+                                له خصائص المكتب التقليدي، بل وأكثر من حيث المتابعة والمرونة والإنجاز
+                                أي موظف يحصل على اسم مستخدم وكلمة مرور على نظام رافد وهي تمثل المفتاح الخاص بدخول المكتب
+                                الإلكتروني الخاص به وعليه الحفاظ على هذا المفتاح
+                                هذا المكتب مرتبط بكل إدارات النظام في المكاتب الأخرى في إدارات الجمعية وبالتالي تمثل
+                                الجمعية شبكة متكاملة على السحابة تؤدي دورها على أكمل وجه
+                            </p>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nav-3" role="tabpanel">
+                        <!-- component content -->
+                        <div class="componentContent">
+                            <img class="componentImg" src="assets/images/amity-img-3.jpg" alt="">
+                            <!-- list -->
+                            <div class="list">
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">1</span>
+                                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                                        repellat laboriosam
+                                        hic consequuntur ab, suscipit unde quibusdam, voluptatibus labore soluta
+                                        obcaecati odio. Porro necessitatibus repellendus ipsum aspernatur blanditiis
+                                        ducimus ratione?
+                                    </p>
+                                </div>
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">2</span>
+                                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                                        repellat laboriosam
+                                        hic consequuntur ab, suscipit unde quibusdam, voluptatibus labore soluta
+                                        obcaecati odio. Porro necessitatibus repellendus ipsum aspernatur blanditiis
+                                        ducimus ratione?
+                                    </p>
+                                </div>
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">3</span>
+                                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                                        repellat laboriosam
+                                        hic consequuntur ab, suscipit unde quibusdam, voluptatibus labore soluta
+                                        obcaecati odio. Porro necessitatibus repellendus ipsum aspernatur blanditiis
+                                        ducimus ratione?
+                                    </p>
+                                </div>
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">4</span>
+                                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                                        repellat laboriosam
+                                        hic consequuntur ab, suscipit unde quibusdam, voluptatibus labore soluta
+                                        obcaecati odio. Porro necessitatibus repellendus ipsum aspernatur blanditiis
+                                        ducimus ratione?
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nav-4" role="tabpanel">
+                        <!-- component content -->
+                        <div class="componentContent">
+                            <p class="componentText">
+                                تغيير لنمطية المكتب التقليدي الذي يعتمد على الحضور والتواجد من الموظف طوال ساعات العمل
+                                في المكتب لتنفيذ الإجراءات والسياسات التي يقوم عليها العمل في الجمعية والتي تعتمد على
+                                الورق وأي غياب للموظف يؤدي إلى تعطل العمل وبالتالي توقف المعاملات الأمر الذي ينعكس سلباً
+                                على أداء الجمعية
+                                لقد تم تغيير هذا النمط إلى المكتب الإلكتروني في نظام رافد
+                                له خصائص المكتب التقليدي، بل وأكثر من حيث المتابعة والمرونة والإنجاز
+                                أي موظف يحصل على اسم مستخدم وكلمة مرور على نظام رافد وهي تمثل المفتاح الخاص بدخول المكتب
+                                الإلكتروني الخاص به وعليه الحفاظ على هذا المفتاح
+                                هذا المكتب مرتبط بكل إدارات النظام في المكاتب الأخرى في إدارات الجمعية وبالتالي تمثل
+                                الجمعية شبكة متكاملة على السحابة تؤدي دورها على أكمل وجه
+                            </p>
+                            <!-- list -->
+                            <div class="list">
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">1</span>
+                                    <p class="text">
+                                        تسجيل الحضور والانصراف استلام المهام من مجلس الإدارة أو من المدير التنفيذي أو
+                                        مديره المباشر ومتابعة تنفيذها
+                                    </p>
+                                </div>
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">2</span>
+                                    <p class="text">
+                                        القيام بالصلاحيات الممنوحة له من إدارة النظام مثل أن يكون باحث اجتماعي فهو يقوم
+                                        بصلاحيات البحث الاجتماعي أو التحديث
+                                    </p>
+                                </div>
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">3</span>
+                                    <p class="text">
+                                        متابعة مؤشرات الخطة التشغيلية المبنية على الخطة الاستراتيجية وتنفيذها
+                                    </p>
+                                </div>
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">4</span>
+                                    <p class="text">
+                                        إمكانية التواصل الداخلي وطلب معلومات أو إرسال معلومات أو بيانات مع كل إدارة من
+                                        إدارات الجمعية ومكاتب الجمعية الأخرى
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nav-5" role="tabpanel">
+                        <!-- component content -->
+                        <div class="componentContent">
+                            <img class="componentImg" src="assets/images/amity-img-3.jpg" alt="">
+                            <p class="componentText">
+                                تغيير لنمطية المكتب التقليدي الذي يعتمد على الحضور والتواجد من الموظف طوال ساعات العمل
+                                في المكتب لتنفيذ الإجراءات والسياسات التي يقوم عليها العمل في الجمعية والتي تعتمد على
+                                الورق وأي غياب للموظف يؤدي إلى تعطل العمل وبالتالي توقف المعاملات الأمر الذي ينعكس سلباً
+                                على أداء الجمعية
+                                لقد تم تغيير هذا النمط إلى المكتب الإلكتروني في نظام رافد
+                                له خصائص المكتب التقليدي، بل وأكثر من حيث المتابعة والمرونة والإنجاز
+                                أي موظف يحصل على اسم مستخدم وكلمة مرور على نظام رافد وهي تمثل المفتاح الخاص بدخول المكتب
+                                الإلكتروني الخاص به وعليه الحفاظ على هذا المفتاح
+                                هذا المكتب مرتبط بكل إدارات النظام في المكاتب الأخرى في إدارات الجمعية وبالتالي تمثل
+                                الجمعية شبكة متكاملة على السحابة تؤدي دورها على أكمل وجه
+                            </p>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nav-6" role="tabpanel">
+                        <!-- component content -->
+                        <div class="componentContent">
+                            <!-- list -->
+                            <div class="list">
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">1</span>
+                                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                                        repellat laboriosam
+                                        hic consequuntur ab, suscipit unde quibusdam, voluptatibus labore soluta
+                                        obcaecati odio. Porro necessitatibus repellendus ipsum aspernatur blanditiis
+                                        ducimus ratione?
+                                    </p>
+                                </div>
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">2</span>
+                                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                                        repellat laboriosam
+                                        hic consequuntur ab, suscipit unde quibusdam, voluptatibus labore soluta
+                                        obcaecati odio. Porro necessitatibus repellendus ipsum aspernatur blanditiis
+                                        ducimus ratione?
+                                    </p>
+                                </div>
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">3</span>
+                                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                                        repellat laboriosam
+                                        hic consequuntur ab, suscipit unde quibusdam, voluptatibus labore soluta
+                                        obcaecati odio. Porro necessitatibus repellendus ipsum aspernatur blanditiis
+                                        ducimus ratione?
+                                    </p>
+                                </div>
+                                <!-- list item -->
+                                <div class="listItem">
+                                    <span class="num">4</span>
+                                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae
+                                        repellat laboriosam
+                                        hic consequuntur ab, suscipit unde quibusdam, voluptatibus labore soluta
+                                        obcaecati odio. Porro necessitatibus repellendus ipsum aspernatur blanditiis
+                                        ducimus ratione?
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- System Tour -->
